--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@nexustechpro/baileys": "latest",
+    "@nexustechpro/baileys": "^1.1.9",
     "axios": "latest",
     "bcryptjs": "latest",
     "canvas": "^3.2.0",
